<resources>
    <!-- Generales de la aplicación -->
    <string name="app_name">Andalucismos</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <string name="nav_header_title">Andalucismos</string>
    <string name="nav_header_subtitle">Diccionario de palabras andaluzas</string>
    <string name="nav_header_desc">Cabecera del menú de navegación</string>
    <string name="action_alfabetico_asc">Orden A-Z</string>
    <string name="action_alfabetico_desc">Orden Z-A</string>
    <string name="action_mas_vistas">Top vistas</string>
    <string name="action_mas_recientes">Más recientes</string>
    <string name="action_mas_antiguas">Más antiguas</string>
    <string name="action_mas_favoritos">Top favoritas</string>

    <!-- Menú -->
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_salir">Cerrar sesión</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_nueva">Añadir palabra</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_historial">Historial (50 últimas)</string>
    <string name="menu_propias">Mis aportaciones</string>
    <string name="menu_detalle_palabra">Detalle palabra</string>

    <string name="descripcion_logo">AndalucismosLogo</string>
    <string name="correo_electronico">Correo electrónico *</string>
    <string name="contrasena">Contraseña *</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>

    <string name="texto_superior_formulario">Rellena todos los campos obligatorios (*)</string>

    <!-- LoginActivity -->
    <string name="texto_superior_login">Inicio de sesión</string>
    <string name="texto_inferior_login">Andalucismos. Diccionario de palabras andaluzas.</string>

    <!-- RegistroActivity -->
    <string name="texto_superior_registro">Registro</string>
    <string name="repetir_contrasena">Repetir contraseña *</string>
    <string name="sexo_hint">Elegir sexo: *</string>
    <string-array name="sexo">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>
    <string name="nombre_usuario">Nombre de usuario *</string>
    <string name="biografia">Biografía (250 caracteres máximos)</string>
    <string name="texto_inferior_registro">Gestionando el pasaporte de andaluz…</string>
    <string name="volver_iniciar_sesion">Volver</string>
    <string name="politica_privacidad">He leído y acepto la</string>
    <string name="politica_privacidad_link">Política de privacidad</string>

    <!-- Añadir palabra (Fragment) -->
    <string name="palabra">Palabra *</string>
    <string name="significado">Significado *</string>
    <string name="ejemplo">Ejemplo de uso *</string>
    <string name="poblacion">Población</string>
    <string name="provincia">Provincias</string>
    <string-array name="provincias">
        <item>Varias</item>
        <item>Granada</item>
        <item>Málaga</item>
        <item>Córdoba</item>
        <item>Sevilla</item>
        <item>Huelva</item>
        <item>Almería</item>
        <item>Jaén</item>
        <item>Cádiz</item>
    </string-array>
    <string name="comarca">Comarca</string>
    <string name="tags">Tags (Separados por un espacio)</string>
    <string name="anadir">Añadir palabra</string>
    <string name="texto_inferior_anadir">Escribiendo en los antiguos pergaminos…</string>

    <!-- Detalle palabra (Fragment) -->
    <string name="ejemplo_detalle">Ejemplo de uso</string>
    <string name="ubicaciones">Ubicación de la capital</string>
    <string name="contribucion_usuario">Contribución de:</string>
    <string name="anadida_el">Añadida el:</string>

    <!-- Perfil (Fragment) -->
    <string name="perfil_biografia">Biografía</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="eliminar_cuenta">Borrar cuenta</string>
    <string name="guardar_cambios">Guardar cambios</string>

    <!-- Feedback (Fragment) -->
    <string name="texto_superior_feedback">¿Quieres contarnos algo?</string>
    <string name="tipo_comentario_texto">Tipo de comentario *</string>
    <string-array name="tipo_comentario">
        <item>Error</item>
        <item>Reporte</item>
        <item>Sugerencia</item>
        <item>Otro</item>
    </string-array>
    <string name="escribe_aqui">Escribe aquí: *</string>
    <string name="boton_enviar">Enviar</string>

    <!-- Claves google -->
    <string name="default_web_client_id">1039494721757-qca244irl0pber0o057a7je9s54bj2do.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>