<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.amt.andalucismos.ui.ajustes.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/fragment_ajustes" />

    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.amt.andalucismos.ui.ayuda.AyudaFragment"
        android:label="@string/menu_ayuda"
        tools:layout="@layout/fragment_ayuda" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.amt.andalucismos.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.amt.andalucismos.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.amt.andalucismos.ui.historial.HistorialFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.amt.andalucismos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_nueva"
        android:name="com.amt.andalucismos.ui.nueva.NuevaFragment"
        android:label="@string/menu_nueva"
        tools:layout="@layout/fragment_nueva" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.amt.andalucismos.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>